# herfa-ecommerce

./: .gitignore  pyproject.toml  test.py
app/: config.py  main.py  utils.py
app/api/common/: dependencies.py
app/api/core/: security.py
app/api/routes/: category.py  master.py  products.py  users.py
app/api/service/: base_service.py  category_service.py  product_service.py  user_service.py
app/database/: db_session.py
app/database/model/: __init__.py  category.py  product.py  user.py
app/database/schemas/: category.py  product.py  user.py
migrations/: env.py
migrations/versions/: 324060a32916_revision_to_create_products_and_.py  3cb292f6a848_revision_for_users_table_v1.py  ef70300e3fa0_revision_for_users_table_added_a_new_.py  f62d90b736bd_revision_to_add_deleted_to_attribute_to_.py  f84f52aae6a0_revision_for_users_table.py
