[project]
name = "herfa-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.1",
    "boto3>=1.40.69",
    "boto3-stubs[essential]>=1.40.69",
    "fastapi[all]>=0.121.1",
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
    "scalar-fastapi>=1.4.3",
    "sqlmodel>=0.0.27",
]
